--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ mnist = { version = "0.5.0", features = ["download"] }
 chrono = "0.4"
 log = "0.4"
 env_logger = "0.9"
+faer = "0.18.2"
+rayon = "1.5"
