--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.5"
+rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ndarray = { version = "0.12" }
@@ -18,3 +18,4 @@ rayon = "1.5"
 autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
 tokio = { version = "1.37.0", features = ["net", "rt-multi-thread"] }
 axum = "0.7.5"
+spinners = "4.1.1"
